--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -115,31 +115,27 @@ steps:
       - label: ":computer: Box hydrostatic balance (ρe_tot)"
         command: "julia --color=yes --project=examples examples/hybrid/driver.jl --config box --perturb_initstate false --hyperdiff false --dt 20secs --t_end 1days --job_id box_hydrostatic_balance_rhoe"
         artifact_paths: "box_hydrostatic_balance_rhoe/*"
-        agents:
-          slurm_mem: 20GB
 
   - group: "Sphere Examples (Dycore)"
     steps:
 
-      - label: ":computer: hydrostatic balance (ρe_tot) float64"
+      - label: ":computer: hydrostatic balance (ρe) float64"
         command: "julia --color=yes --project=examples examples/hybrid/driver.jl --perturb_initstate false --discrete_hydrostatic_balance true --use_reference_state false --hyperdiff false --dt_save_to_sol 600secs --job_id sphere_hydrostatic_balance_rhoe_ft64 --FLOAT_TYPE Float64 --bubble true"
         artifact_paths: "sphere_hydrostatic_balance_rhoe_ft64/*"
-        agents:
-          slurm_mem: 20GB
 
-      - label: ":computer: baroclinic wave (ρe_tot) Float64"
-        command: "julia --color=yes --project=examples examples/hybrid/driver.jl --FLOAT_TYPE Float64 --bubble true --job_id sphere_baroclinic_wave_rhoe_Float64"
-        artifact_paths: "sphere_baroclinic_wave_rhoe_Float64/*"
-
-      - label: ":computer: baroclinic wave (ρe_tot)"
+      - label: ":computer: baroclinic wave (ρe)"
         command: "julia --color=yes --project=examples examples/hybrid/driver.jl --job_id sphere_baroclinic_wave_rhoe --dt 580secs --regression_test true"
         artifact_paths: "sphere_baroclinic_wave_rhoe/*"
+      
+      - label: ":computer: baroclinic wave (ρe) h_elem8"
+        command: "julia --color=yes --project=examples examples/hybrid/driver.jl --h_elem 8 --kappa_4 5e16 --job_id sphere_baroclinic_wave_rhoe_he8 --dt 500secs"
+        artifact_paths: "sphere_baroclinic_wave_rhoe_he8/*"
 
-      - label: ":computer: baroclinic wave (ρe_tot) equilmoist"
+      - label: ":computer: baroclinic wave (ρe) equilmoist"
         command: "julia --color=yes --project=examples examples/hybrid/driver.jl --moist equil --precip_model 0M --job_id sphere_baroclinic_wave_rhoe_equilmoist --regression_test true --dt 450secs"
         artifact_paths: "sphere_baroclinic_wave_rhoe_equilmoist/*"
 
-      - label: ":computer: baroclinic wave (ρe_tot) equilmoist check conservation float64"
+      - label: ":computer: baroclinic wave (ρe) equilmoist check conservation float64"
         command: "julia --color=yes --project=examples examples/hybrid/driver.jl --moist equil --rad clearsky --job_id sphere_baroclinic_wave_rhoe_equilmoist_conservation_ft64 --check_conservation true --FLOAT_TYPE Float64 --bubble true --dt 450secs"
         artifact_paths: "sphere_baroclinic_wave_rhoe_equilmoist_conservation_ft64/*"
 
@@ -147,88 +143,44 @@ steps:
         command: "julia --color=yes --project=examples examples/hybrid/driver.jl --energy_name rhotheta --forcing held_suarez --job_id sphere_held_suarez_rhotheta --regression_test true --dt 500secs --t_end 30days"
         artifact_paths: "sphere_held_suarez_rhotheta/*"
 
-      - label: ":computer: held suarez (ρe_tot)"
-        command: "julia --color=yes --project=examples examples/hybrid/driver.jl --forcing held_suarez --job_id sphere_held_suarez_rhoe --regression_test true --t_end 30days --dt 500secs"
-        artifact_paths: "sphere_held_suarez_rhoe/*"
-
-      - label: ":computer: held suarez (ρe_tot) equilmoist"
-        command: "julia --color=yes --project=examples examples/hybrid/driver.jl --vert_diff true --surface_scheme bulk --moist equil --forcing held_suarez --precip_model 0M --job_id sphere_held_suarez_rhoe_equilmoist --regression_test true --dt 450secs"
-        artifact_paths: "sphere_held_suarez_rhoe_equilmoist/*"
-        agents:
-          slurm_mem: 20GB
+      - label: ":computer: held suarez (ρe) hightop"
+        command: "julia --color=yes --project=examples examples/hybrid/driver.jl --z_max 45e3 --z_elem 25 --dz_bottom 300 --forcing held_suarez --job_id sphere_held_suarez_rhoe_hightop --regression_test true --dt 500secs"
+        artifact_paths: "sphere_held_suarez_rhoe_hightop/*"
 
       - label: ":computer: held suarez (ρe) equilmoist hightop sponge"
-        command: "julia --color=yes --project=examples examples/hybrid/driver.jl --z_max 45e3 --z_elem 25 --vert_diff true --surface_scheme bulk --moist equil --forcing held_suarez --precip_model 0M --rayleigh_sponge true --alpha_rayleigh_uh 0 --viscous_sponge true --zd_rayleigh 30e3 --zd_viscous 30e3 --job_id sphere_held_suarez_rhoe_equilmoist_hightop_sponge --dt 450secs --t_end 1days"
+        command: "julia --color=yes --project=examples examples/hybrid/driver.jl --z_max 45e3 --z_elem 25 --dz_bottom 300 --vert_diff true --surface_scheme bulk --moist equil --forcing held_suarez --precip_model 0M --rayleigh_sponge true --alpha_rayleigh_uh 0 --viscous_sponge true --zd_rayleigh 30e3 --zd_viscous 30e3 --job_id sphere_held_suarez_rhoe_equilmoist_hightop_sponge --dt 450secs --t_end 5days --regression_test true"
         artifact_paths: "sphere_held_suarez_rhoe_equilmoist_hightop_sponge/*"
-      
-      - label: ":computer: held suarez (ρe_tot) equilmoist monin_obukhov"
-        command: "julia --color=yes --project=examples examples/hybrid/driver.jl --vert_diff true --surface_scheme monin_obukhov --moist equil --forcing held_suarez --precip_model 0M --job_id sphere_held_suarez_rhoe_equilmoist_mo --dt 600secs"
-        artifact_paths: "sphere_held_suarez_rhoe_equilmoist_mo/*"
 
   - group: "Sphere Examples (Aquaplanet)"
     steps:
 
-      - label: ":computer: aquaplanet (ρe_tot) equilmoist clearsky radiation monin_obukhov"
-        command: "julia --color=yes --project=examples examples/hybrid/driver.jl --vert_diff true --surface_scheme monin_obukhov --moist equil --rad clearsky --precip_model 0M --job_id sphere_aquaplanet_rhoe_equilmoist_clearsky --dt 400secs --t_end 5days"
-        artifact_paths: "sphere_aquaplanet_rhoe_equilmoist_clearsky/*"
-        agents:
-          slurm_mem: 20GB
-
-      - label: ":computer: aquaplanet (ρe_tot) equilmoist allsky radiation monin_obukhov varying insolation"
-        command: "julia --color=yes --project=examples examples/hybrid/driver.jl --idealized_insolation false --vert_diff true --surface_scheme monin_obukhov --moist equil --rad allskywithclear --precip_model 0M --job_id sphere_aquaplanet_rhoe_equilmoist_allsky --dt 400secs --t_end 5days --regression_test true"
-        artifact_paths: "sphere_aquaplanet_rhoe_equilmoist_allsky/*"
+      - label: ":computer: aquaplanet (ρe_tot) equilmoist allsky radiation monin_obukhov varying insolation gravity wave high top"
+        command: "julia --color=yes --project=examples examples/hybrid/driver.jl --z_max 45e3 --z_elem 25 --dz_bottom 300 --idealized_insolation false --vert_diff true --surface_scheme monin_obukhov --moist equil --rad allskywithclear --non_orographic_gravity_wave true --orographic_gravity_wave true --precip_model 0M --rayleigh_sponge true --alpha_rayleigh_uh 0 --zd_rayleigh 30e3 --job_id sphere_aquaplanet_rhoe_equilmoist_allsky_gw --dt 400secs --t_end 1days --regression_test true"
+        artifact_paths: "sphere_aquaplanet_rhoe_equilmoist_allsky_gw/*"
 
       - label: ":computer: aquaplanet (ρe_tot) equilmoist with EDMF"
         command: "julia --color=yes --project=examples examples/hybrid/driver.jl --moist dry --anelastic_dycore false --job_id sphere_baroclinic_wave_rhoe_equilmoist_mo_edmf --vert_diff true --surface_scheme bulk --dt 1secs --t_end 20secs --FLOAT_TYPE Float64 --turbconv edmf --turbconv_case Soares --config sphere --precip_model 0M --z_stretch false --post_process  false --apply_limiter false --dt_save_to_sol 10secs --dt_save_to_disk 10secs"
         artifact_paths: "sphere_baroclinic_wave_rhoe_equilmoist_mo_edmf/*"
         agents:
           slurm_mem: 20GB
-
-  - group: "Sphere Examples (Gravity wave)"
-    steps:
-
-      - label: ":computer: baroclinic wave with orographic gravity wave"
-        command: "julia --color=yes --project=examples examples/hybrid/driver.jl --orographic_gravity_wave true --job_id sphere_baroclinic_wave_ogw --t_end 1days --regression_test true"
-        artifact_paths: "sphere_baroclinic_wave_ogw"
-
-      - label: ":computer: held suarez (ρe) equilmoist hightop gw parameterization"
-        command: "julia --color=yes --project=examples examples/hybrid/driver.jl --z_max 45e3 --z_elem 50 --dz_top 3e3 --vert_diff true --surface_scheme bulk --moist equil --forcing held_suarez --precip_model 0M --non_orographic_gravity_wave true --job_id sphere_held_suarez_rhoe_equilmoist_hightop_nogw --dt 450secs --t_end 1days --regression_test true"
-        artifact_paths: "sphere_held_suarez_rhoe_equilmoist_hightop_nogw/*"
       
   - group: "Sphere Examples (Topography)"
     steps:
 
-      - label: ":computer: held suarez (ρe_tot) topography (dcmip)"
-        command: "julia --color=yes --project=examples examples/hybrid/driver.jl --forcing held_suarez --job_id sphere_held_suarez_rhoe_topography_dcmip --t_end 6days --topography DCMIP200 --dt 200secs --regression_test false --rayleigh_sponge true --viscous_sponge true"
-        artifact_paths: "sphere_held_suarez_rhoe_dcmip_topography_dcmip/*"
-
-      - label: ":computer: baroclinic wave (ρe_tot) topography (dcmip)"
-        command: "julia --color=yes --project=examples examples/hybrid/driver.jl --job_id sphere_baroclinic_wave_rhoe_topography_dcmip --topography DCMIP200 --dt 200secs --regression_test false --rayleigh_sponge true --viscous_sponge true"
-        artifact_paths: "sphere_baroclinic_wave_rhoe_topography_dcmip/*"
-
-      - label: ":computer: baroclinic wave (ρe_tot) topography (dcmip): no viscous sponge"
-        command: "julia --color=yes --project=examples examples/hybrid/driver.jl --job_id sphere_baroclinic_wave_rhoe_topography_dcmip_rs --topography DCMIP200 --dt 200secs --regression_test false --rayleigh_sponge true"
+      - label: ":computer: baroclinic wave (ρe) topography (dcmip): no viscous sponge"
+        command: "julia --color=yes --project=examples examples/hybrid/driver.jl --job_id sphere_baroclinic_wave_rhoe_topography_dcmip_rs --topography DCMIP200 --dt 200secs --rayleigh_sponge true"
         artifact_paths: "sphere_baroclinic_wave_rhoe_topography_dcmip_rs/*"
 
-      - label: ":computer: baroclinic wave (ρe_tot) equilmoist topography (dcmip)"
-        command: "julia --color=yes --project=examples examples/hybrid/driver.jl --moist equil --precip_model 0M --job_id sphere_baroclinic_wave_rhoe_equilmoist_topography_dcmip --t_end 6days --topography DCMIP200 --dt 200secs --regression_test false --rayleigh_sponge true --viscous_sponge true"
-        artifact_paths: "sphere_baroclinic_wave_rhoe_equilmoist_topography_dcmip/*"
+      - label: ":computer: held suarez (ρe) topography (dcmip)"
+        command: "julia --color=yes --project=examples examples/hybrid/driver.jl --forcing held_suarez --job_id sphere_held_suarez_rhoe_topography_dcmip --t_end 6days --topography DCMIP200 --dt 200secs --rayleigh_sponge true --viscous_sponge true"
+        artifact_paths: "sphere_held_suarez_rhoe_dcmip_topography_dcmip/*"
 
-      - label: ":computer: held suarez (ρe_tot) equilmoist topography (dcmip)"
-        command: "julia --color=yes --project=examples examples/hybrid/driver.jl --vert_diff true --surface_scheme bulk --moist equil --forcing held_suarez --precip_model 0M --job_id sphere_held_suarez_rhoe_equilmoist_topography_dcmip --dt 200secs --t_end 3days --topography DCMIP200 --regression_test false --rayleigh_sponge true --viscous_sponge true"
+      - label: ":computer: held suarez (ρe) equilmoist topography (dcmip)"
+        command: "julia --color=yes --project=examples examples/hybrid/driver.jl --vert_diff true --surface_scheme bulk --moist equil --forcing held_suarez --precip_model 0M --job_id sphere_held_suarez_rhoe_equilmoist_topography_dcmip --dt 200secs --t_end 3days --topography DCMIP200 --rayleigh_sponge true --viscous_sponge true"
         artifact_paths: "sphere_held_suarez_rhoe_equilmoist_topography_dcmip/*"
       
   - group: "MPI Examples"
     steps:
-
-      - label: ":computer: MPI baroclinic wave (ρe_tot)"
-        key: "mpi_baro_wave_ARS343"
-        command: "mpiexec julia --color=yes --project=examples examples/hybrid/driver.jl --job_id mpi_baroclinic_wave_rhoe --dt 580secs"
-        artifact_paths: "mpi_baroclinic_wave_rhoe/*"
-        env:
-          CLIMACORE_DISTRIBUTED: "MPI"
-        agents:
-          slurm_ntasks: 2
 
       - label: ":computer: Prep restart for MPI"
         key: "mpi_baro_wave_make_restart"
@@ -254,7 +206,7 @@ steps:
         #retry:
         #  automatic: true
 
-      - label: ":computer: MPI aquaplanet (ρe_tot) equilmoist clearsky radiation"
+      - label: ":computer: MPI aquaplanet (ρe) equilmoist clearsky radiation"
         command: "mpiexec julia --color=yes --project=examples examples/hybrid/driver.jl --vert_diff true --surface_scheme bulk --moist equil --rad clearsky --precip_model 0M --job_id mpi_sphere_aquaplanet_rhoe_equilmoist_clearsky --dt 400secs --t_end 4days"
         artifact_paths: "mpi_sphere_aquaplanet_rhoe_equilmoist_clearsky/*"
         env:
@@ -318,12 +270,6 @@ steps:
         command: "julia --color=yes --project=examples examples/hybrid/driver.jl --config column --FLOAT_TYPE Float64 --hyperdiff false --moist equil --subsidence Bomex --edmf_coriolis Bomex --ls_adv Bomex --turbconv edmf --turbconv_case Bomex --dt_save_to_sol 5mins --z_elem 60 --z_stretch false --z_max 3e3 --use_krylov_method true --job_id dycore_consistency --quicklook_reference_job_id compressible_edmf_bomex --dt 40secs --t_end 6hours --apply_limiter false --test_dycore_consistency true --debugging_tc true --dt_save_to_disk 5mins"
         artifact_paths: "dycore_consistency/*"
         soft_fail: true
-        agents:
-          slurm_mem: 20GB
-
-      - label: ":computer: no surface scheme"
-        command: "julia --color=yes --project=examples examples/hybrid/driver.jl --job_id no_surface --surface_scheme nothing --enable_threading false --forcing held_suarez --vert_diff true --surface_scheme bulk --moist equil --rad allskywithclear --precip_model 0M --dt 1secs --t_end 10secs --dt_save_to_sol Inf --z_elem 25 --h_elem 12"
-        artifact_paths: "no_surface/*"
         agents:
           slurm_mem: 20GB
 
